# Correlation

./: .gitignore  CLAUDE.md  config.yaml  main.py  pyproject.toml  setup.py
experiments/: bandpass_heatmap.py  ber_curve.py  minimize.py  parameter_optimize.py  sampling_snr_plot.py  single.py  single_pipe.py  sweep.py
src/: __init__.py  best_fit_pipe.py  channel.py  correlator.py  correlator_pipe.py  decode_pipe.py  filter_pipe.py  filters.py  maximum_pipe.py  metrics.py  noise_pipe.py  physical_units.py  plot_pipe.py  plots.py  ppmbin.py  ppmbin_pipe.py  ppmsignal.py  pulse_gen.py  runner.py  runner_pipe.py  sampling_pipe.py  signal_pipe.py  threshold_pipe.py
src/dzida_phy/: __init__.py  best_fit_pipe.py  correlator_pipe.py  decode_pipe.py  fft_plot_pipe.py  filter_pipe.py  metrics.py  noise_pipe.py  physical_units.py  plot_pipe.py  ppmbin_pipe.py  quantization_pipe.py  runner_pipe.py  sampling_pipe.py  signal_pipe.py  threshold_pipe.py
src/dzida_phy/models/: model.py  model1.py  model1_time.py  phy_model.py
src/dzida_phy/native_optimized/: corr_ext.cpp
src/dzida_phy/physical/: adc.py  detector.py  diode.py
src/models/: model.py  model1.py  model1_time.py
src/native_optimized/: __init__.py
src/physical/: adc.py  detector.py  diode.py
tests/: test_timed_pipes.py
tests/native_optimized/: test_corr_ext.py
