[project]
name = "correlation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.4",
    "pyyaml>=6.0",
    "scipy>=1.13",
    "matplotlib>=3.9",
    "py-spy>=0.4.1",
    "numba>=0.65.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
