[project]
name = "dzida-phy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.4",
    "pyyaml>=6.0",
    "scipy>=1.13",
    "matplotlib>=3.9",
    "py-spy>=0.4.1",
    "numba>=0.65.1",
]

[build-system]
requires = ["setuptools>=68", "numpy"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "setuptools>=82.0.1",
]
