[project]
name = "dzida-phy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.4",
    "pyyaml>=6.0",
    "scipy>=1.13",
    "matplotlib>=3.9",
    "py-spy>=0.4.1",
    "numba>=0.65.1",
    "ruff>=0.15.20",
]

[build-system]
requires = ["setuptools>=68", "numpy"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "setuptools>=82.0.1",
]

[tool.ruff]
line-length = 110
target-version = "py312"
fix = true
show-fixes = true

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort imports
    "UP",     # pyupgrade
    "C4",     # comprehensions
    "SIM",    # simplifications
    "RET",    # return rules
    "ARG",    # unused arguments
    "PTH",    # pathlib usage
    "B",      # bugbear
    "ERA",    # commented code
    "RUF",    # ruff-native
    "PL",     # pylint
]

ignore = [
    # Formatter Integration
    "E501",    # Line too long (formatter handles)
    "W191",    # Tabs (formatter normalizes)
    "ISC001",  # String concat (formatter choice)
    # Docstring Conflicts
    "D203",    # vs D211
    "D212",    # vs D213
    # Pylint: Context-dependent
    "PLR0913", # Too many args (dataclasses are fine)
    "PLC0414", # Unused imports (maybe in __all__)
]

fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",   # Use of assert
    "PLR2004", # Magic values
    "D",      # Docstrings
    "F401",   # Unused imports (fixtures!)
    "F811",   # Redefined names (patches)
]
"config.py" = [
    "D100",   # Module docstring optional
]
"__init__.py" = [
    "F401",   # Re-exported in __all__
    "D104",   # Package docstring optional
]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Query"
]

[tool.ruff.lint.isort]
known-first-party = ["dzida_phy"]

[tool.ruff.lint.pylint]
max-args = 10         # Realistic for dataclasses
max-branches = 12     # Keep default (reasonable)
max-statements = 50   # Keep default (reasonable)
max-bool-expr = 5     # Catch complex conditions

[tool.ruff.format]
quote-style = "double"              # Use double quotes
indent-style = "space"              # Use spaces, not tabs
skip-magic-trailing-comma = false   # Allow trailing commas (boolean, not string!)
line-ending = "auto"                # Respect system line endings
